fix unaligned products

--- a/style.css
+++ b/style.css
@@ -401,6 +401,10 @@ html {
   margin-bottom: 20px;
 }
 
+.products-grid .product img.main-image, .slide-item.product-slide.grid-slide img.main-image {
+  max-height: 200px;
+}
+
 /* Hide quick view on tablet and mobile */
 @media max-width: 979px { 
   .products-grid .product:hover .show-quickly,
